feature(openAPI): add contact api
